﻿Changelog
=========

4.6-dev - (unreleased)
----------------------

4.5 - (2012-11-22)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.epub
  [ichimdav #3621]
* Feature: use filename id when creating plone content, cleaning the filename
  id when it contains illegal characters if boolean property 
  clean_epub_filename is enabled at portal_properties/site_properties
  [ichimdav #3621]

4.4 - (2012-06-12)
------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Change: Change code in eea.epub to fix translation problem
  [prospchr refs #5159]  

4.3 - (2012-04-26)
------------------
* Feature: import epubs that are not created by Adobe Indesign which have the 
  images and the html pages in separate folder like those created by Sigil
  [ichimdav #5054] 

4.2 - (2012-02-06)
------------------
* no changes

4.1 - (2012-02-06)
------------------
* Bug fix: Added dependencies to setup.py
  [voineali]

4.0-dev - (2011-11-06)
----------------------
* Bug fix: proper parsing of html entities by using an html parser instead of 
  an xml one 
  [ichimdav #4523]
* Bug fix: cleaned spaces defined as &nbsp that can't be read as xml
  [ichimdav #4271]
* Cleanup: fixed all pylint, pyflakes violations
  [voineali #4121]
* Feature: added upgrade steps
  [voineali @4392]
* Feature: Plone 4.0.4 compatible release
  [tiberich #4121]

0.6 - (2011-04-07)
------------------
* Bug fix: clean epub import to prevent navigation portlet from miss-behaving
  [ichimdav #4242]
* Bug fix: fixes #4242 Removed / clean up, the portlet epub and toc,
  we can use standard plone nav
  [demarant]
* Feature: force documents/chapters not to be renamed after title change
  [demarant]

0.5 - (2011-03-17)
------------------
* Bug fix: fixed wrong anchors that spanned over paragraphs
  [ichimdav #4196]
* Bug fix: added translation domain to ZCML files
  [voineali #4139]

0.4 - (2011-03-09)
------------------